fix(style): Fix keypad width to align with input field width

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,8 @@
   align-items: center;
 }
 
-.numPad {
-  width: 400px;
+.keypad {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1em;
